// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditNote component should match snapshot of edit note when it was saved successfully 1`] = `
<DocumentFragment>
  <section
    class="edit-notes"
  >
    <div
      class="go-back"
      role="button"
      tabindex="0"
    >
      <svg
        class="icon"
      >
        <use
          xlink:href="/svglist.svg#arrow_left"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <span>
        View All Notes
      </span>
    </div>
    <div
      class="date-title"
    >
      <input
        class="title"
        placeholder="CLICK TO ADD TITLE"
        value="My First Test Note"
      />
      <span
        class="date"
      >
        02.20.19
      </span>
    </div>
    <div
      class="verse-dropdown open"
    >
      <svg
        class="icon"
      >
        <use
          xlink:href="/svglist.svg#arrow_right"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <span
        class="text"
      >
        Matthew 1:7
      </span>
      <span
        class="version-dropdown"
      >
        ENGESV
      </span>
    </div>
    <div
      class="verse-text"
    >
      " For all have sinned and fallen short of the glory of God. "
    </div>
    <textarea
      class="note-text"
      placeholder="CLICK TO ADD NOTE"
    >
      This is a test note!
    </textarea>
    <div
      class="delete-note-section"
    >
      <span
        class="delete-button"
        role="button"
        tabindex="0"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="/svglist.svg#delete"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        Delete Note
      </span>
      <span
        class="saved-note"
        role="button"
        tabindex="0"
      >
        Saved
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`EditNote component should match snapshot of edit note when there was an error saving it 1`] = `
<DocumentFragment>
  <section
    class="edit-notes"
  >
    <div
      class="go-back"
      role="button"
      tabindex="0"
    >
      <svg
        class="icon"
      >
        <use
          xlink:href="/svglist.svg#arrow_left"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <span>
        View All Notes
      </span>
    </div>
    <div
      class="date-title"
    >
      <input
        class="title"
        placeholder="CLICK TO ADD TITLE"
        value="My First Test Note"
      />
      <span
        class="date"
      >
        02.20.19
      </span>
    </div>
    <div
      class="verse-dropdown open"
    >
      <svg
        class="icon"
      >
        <use
          xlink:href="/svglist.svg#arrow_right"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <span
        class="text"
      >
        Matthew 1:7
      </span>
      <span
        class="version-dropdown"
      >
        ENGESV
      </span>
    </div>
    <div
      class="verse-text"
    >
      " For all have sinned and fallen short of the glory of God. "
    </div>
    <textarea
      class="note-text"
      placeholder="CLICK TO ADD NOTE"
    >
      This is a test note!
    </textarea>
    <div
      class="delete-note-section"
    >
      <span
        class="delete-button"
        role="button"
        tabindex="0"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="/svglist.svg#delete"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        Delete Note
      </span>
      <span
        class="save-button failed"
        role="button"
        tabindex="0"
      >
        Failed
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`EditNote component should match snapshot of edit note when verse text is not visible 1`] = `
<DocumentFragment>
  <section
    class="edit-notes"
  >
    <div
      class="go-back"
      role="button"
      tabindex="0"
    >
      <svg
        class="icon"
      >
        <use
          xlink:href="/svglist.svg#arrow_left"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <span>
        View All Notes
      </span>
    </div>
    <div
      class="date-title"
    >
      <input
        class="title"
        placeholder="CLICK TO ADD TITLE"
        value="My First Test Note"
      />
      <span
        class="date"
      >
        02.20.19
      </span>
    </div>
    <div
      class="verse-dropdown"
    >
      <svg
        class="icon"
      >
        <use
          xlink:href="/svglist.svg#arrow_right"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <span
        class="text"
      >
        Matthew 1:7
      </span>
      <span
        class="version-dropdown"
      >
        ENGESV
      </span>
    </div>
    <textarea
      class="note-text"
      placeholder="CLICK TO ADD NOTE"
    >
      This is a test note!
    </textarea>
    <div
      class="delete-note-section"
    >
      <span
        class="delete-button"
        role="button"
        tabindex="0"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="/svglist.svg#delete"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        Delete Note
      </span>
      <span
        class="save-button"
        role="button"
        tabindex="0"
      >
        Save
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`EditNote component should match snapshot of edit note with default props 1`] = `
<DocumentFragment>
  <section
    class="edit-notes"
  >
    <div
      class="go-back"
      role="button"
      tabindex="0"
    >
      <svg
        class="icon"
      >
        <use
          xlink:href="/svglist.svg#arrow_left"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <span>
        View All Notes
      </span>
    </div>
    <div
      class="date-title"
    >
      <input
        class="title"
        placeholder="CLICK TO ADD TITLE"
        value="My First Test Note"
      />
      <span
        class="date"
      >
        02.20.19
      </span>
    </div>
    <div
      class="verse-dropdown open"
    >
      <svg
        class="icon"
      >
        <use
          xlink:href="/svglist.svg#arrow_right"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <span
        class="text"
      >
        Matthew 1:7
      </span>
      <span
        class="version-dropdown"
      >
        ENGESV
      </span>
    </div>
    <div
      class="verse-text"
    >
      " For all have sinned and fallen short of the glory of God. "
    </div>
    <textarea
      class="note-text"
      placeholder="CLICK TO ADD NOTE"
    >
      This is a test note!
    </textarea>
    <div
      class="delete-note-section"
    >
      <span
        class="delete-button"
        role="button"
        tabindex="0"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="/svglist.svg#delete"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        Delete Note
      </span>
      <span
        class="save-button"
        role="button"
        tabindex="0"
      >
        Save
      </span>
    </div>
  </section>
</DocumentFragment>
`;
